# MagicLeap2SensorReading

./: .gitignore  LICENSE  README.md
ML2Raw/Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
ML2Raw/Assets/Resources/: PerformanceTestRunInfo.json
ML2Raw/Assets/Scenes/: SampleScene.unity
ML2Raw/Assets/Scripts/: Depth.txt  DepthNativeConsumer.cs  DepthTcpSender.cs  MLDepthNative.cs  (+4 more)
ML2Raw/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
ML2Raw/ProjectSettings_BACKUP/: ProjectSettings.asset
ML2Raw_Android/: CMakeLists.txt
ML2Raw_Android/build_android_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
ML2Raw_Android/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
ML2Raw_Android/src/: mlcvcamera.cpp  mlcvcamera.h  mldepth.cpp  mldepth_unity.cpp  mldepth_unity.h  mleyecamera.cpp  mleyecamera.h  mleyetracking.cpp  mleyetracking.h  mlgazerecognition.cpp  mlgazerecognition.h  mlheadtracking.cpp  mlheadtracking.h  mlimu.cpp  mlimu.h  mlmeshing.cpp  mlmeshing.h  mlperception_service.cpp  mlperception_service.h  mlrgbcamera.cpp  mlrgbcamera.h  mlspace.cpp  mlspace.h  mlspatialanchor.cpp  mlspatialanchor.h  mlworldcam.cpp  mlworldcam.h  mlworldcam_unity.cpp  mlworldcam_unity.h
Python_files/: ml2_analyze_all.py  ml2_autodetect.py  ml2_correctness_report.py  ml2_read_cvpose.py  ml2_read_depth.py  ml2_read_headpose.py  ml2_read_rgbpose.py
ROS2Bridge/: ml2_complete_visualizer.py  ml2_complete_visualizer.py.bak  ml2_to_ros2.py  mls_rerun_visualizer.py
(+35 files in other folders)
